# Artifactory

./: CMakeLists.txt
notebook/: DQN.ipynb  PPO.ipynb
src/: DQN.ipynb  SmartTypePriority.cpp
